--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "angularfire2": "^5.1.1",
     "bootstrap": "^4.1.3",
     "bootstrap-colorpicker": "^3.0.3",
+    "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
     "firebase": "^5.7.0",
+    "ng2-charts": "^1.6.0",
     "popper.js": "^1.14.6",
     "rxjs": "~6.3.3",
     "tone": "^0.12.80",
